# marketing_tool

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  bandit-report.json  dockerfile  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  dependency-matrix.yml  deploy.yml  format.yml  os-matrix.yml  performance.yml  pr-checks.yml  python-matrix.yml  release.yml
config/: pipeline.yml
content/: example_blog_post.json  example_transcript.md
docs/: api-reference.md  architecture-diagram.md  ci-cd.md  configuration.md  content-sources.md  getting-started.md  index.md  pipeline-architecture.md  plugin-system.md  testing-guide.md
examples/: content_source_usage.py
k8/: README.md  configmap.yml  cronjob.yml  deployment.yml  hpa.yml  ingress.yml  kustomization.yml  namespace.yml  secret-template.yml  service.yml
src/marketing_project/: __init__.py  logging_config.py  main.py  runner.py  scheduler.py  server.py
tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_main.py  test_models.py  test_ocr.py  test_parsers.py  test_scheduler.py
tests/agents/: test_marketing_agent.py
tests/integrations/: README_E2E.md  test_agent_pipeline.py  test_e2e_full_pipeline.py
tests/plugins/: __init__.py  test_article_generation.py  test_blog_posts.py  test_content_analysis.py  test_content_formatting.py  test_design_kit.py  test_internal_docs.py  test_kwx_keywords.py  test_marketing_brief.py  (+5 more)
(+80 files in other folders)
